<resources>
    <string name="app_name">告警终端</string>
    <string name="www_gdrctd_com">人创天地物联网©www.GDRCTD.com</string>
    <string name="kefu">联系客服</string>
    <string name="back">返回</string>
    <string name="about_us">关于我们</string>
    <string name="reset_password">修改密码</string>
    <string name="settings">系统设置</string>
    <string name="clear">清除应用缓存</string>
    <string name="receive_notice">接受消息通知</string>
    <string name="voice">声音</string>
    <string name="zhendong">震动</string>
    <string name="voice_or_not">此应用在运行时，设置是否需要声音或震动</string>
    <string name="logout">退出登录</string>
    <string name="input_your_old_password">请输入您的原密码</string>
    <string name="old_password">原密码</string>
    <string name="new_password">新密码</string>
    <string name="new_password_confirm">新密码确认</string>
    <string name="confirm">确认</string>
    <string name="input_tips">请输入6-15位数字或字母密码</string>
    <string name="confirm_your_new_password">确认您的新密码</string>
    <string name="message_manager">消息管理</string>
    <string name="car_query">车辆信息查询</string>
    <string name="driver_query">行驶轨迹查询</string>
    <string name="add_duka">新增读卡器</string>
    <string name="duka_manager">读卡器信息管理</string>
    <string name="get_location">获取当前位置信息</string>
    <string name="province">省*</string>
    <string name="city">市*</string>
    <string name="qu">区/县*</string>
    <string name="zhen">镇*</string>
    <string name="address">地址*</string>
    <string name="jingdu">经度*</string>
    <string name="weidu">维度*</string>
    <string name="bianhao">读卡器编号*</string>
    <string name="quyuma">区域码*</string>
    <string name="yingjianid">硬件Id*</string>
    <string name="suoshubumen">所属部门*</string>
    <string name="guanlirenyuan">管理人员*</string>
    <string name="remark">备注*</string>
    <string name="query">条件搜索*</string>
    <string name="status">读卡器状态</string>
    <string name="anzhuang_status">安装状态</string>
    <string name="anzhuang_start_time">安装开始日期</string>
    <string name="anzhuang_start_end">安装结束日期</string>
    <string name="keyword">关键字</string>
    <string name="do_query">查询</string>
    <string name="chepai_rfid">车牌/RFID号</string>
    <string name="car_info_query">查询</string>
    <string name="tiaojian_query">条件搜索</string>
    <string name="begin_date">开始日期</string>
    <string name="begin_time">开始时间</string>
    <string name="end_date">结束日期</string>
    <string name="end_time">结束时间</string>
    <string name="full_info">获取路径信息</string>
    <string name="un_bind_phone">解绑手机</string>
    <string name="bind_phone">绑定手机</string>
    <string name="forgot">忘记密码</string>
</resources>
