<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:id="@+id/action_bar"
        style="@style/action_bar_container">
        <TextView
            android:id="@+id/back"
            style="@style/action_back"
            android:text="@string/back"/>

        <TextView
            style="@style/action_bar_title"
            android:text="@string/reset_password"/>
    </RelativeLayout>

    <LinearLayout
        style="@style/reset_password_item"
        android:layout_marginTop="8dp">
        <TextView
            style="@style/reset_password_title"
            android:text="@string/old_password"/>

        <EditText
            android:id="@+id/old_password"
            style="@style/reset_password_edit"
            android:hint="@string/input_your_old_password"/>
    </LinearLayout>

    <LinearLayout
        style="@style/reset_password_item"
        android:layout_marginTop="16dp">
        <TextView
            style="@style/reset_password_title"
            android:text="@string/new_password"/>

        <EditText
            android:id="@+id/new_password"
            style="@style/reset_password_edit"
            android:hint="@string/input_tips"/>
    </LinearLayout>

    <LinearLayout
        style="@style/reset_password_item">
        <TextView
            style="@style/reset_password_title"
            android:text="@string/new_password_confirm"/>

        <EditText
            android:id="@+id/new_password_confirm"
            style="@style/reset_password_edit"
            android:hint="@string/confirm_your_new_password"/>
    </LinearLayout>

    <Button
        style="@style/full_width_wrap_height"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/btn_blue"
        android:text="@string/confirm"
        android:textColor="@android:color/white"/>
</LinearLayout>
