<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:id="@+id/action_bar"
        style="@style/action_bar_container">
        <TextView
            android:id="@+id/back"
            style="@style/action_back"
            android:text="@string/back"/>

        <TextView
            style="@style/action_bar_title"
            android:text="@string/add_duka"/>
    </RelativeLayout>

    <ScrollView
        style="@style/match_width_match_height">
        <LinearLayout
            style="@style/match_width_wrap_height"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">
            <Button
                android:id="@+id/get_location"
                style="@style/match_width_wrap_height"
                android:text="@string/get_location"/>

            <LinearLayout
                style="@style/add_duka_item">
                <TextView
                    style="@style/add_duka_title"
                    android:text="@string/province"/>

                <EditText
                    android:id="@+id/province"
                    style="@style/add_duka_content"/>
            </LinearLayout>

            <LinearLayout
                style="@style/add_duka_item">
                <TextView
                    style="@style/add_duka_title"
                    android:text="@string/city"/>

                <EditText
                    android:id="@+id/city"
                    style="@style/add_duka_content"/>
            </LinearLayout>

            <LinearLayout
                style="@style/add_duka_item">
                <TextView
                    style="@style/add_duka_title"
                    android:text="@string/qu"/>

                <EditText
                    android:id="@+id/area"
                    style="@style/add_duka_content"/>
            </LinearLayout>

            <LinearLayout
                style="@style/add_duka_item">
                <TextView
                    style="@style/add_duka_title"
                    android:text="@string/zhen"/>

                <EditText
                    android:id="@+id/town"
                    style="@style/add_duka_content"/>
            </LinearLayout>

            <LinearLayout
                style="@style/add_duka_item">
                <TextView
                    style="@style/add_duka_title"
                    android:text="@string/address"/>

                <EditText
                    android:id="@+id/address"
                    style="@style/add_duka_content"/>
            </LinearLayout>

            <LinearLayout
                style="@style/add_duka_item">
                <TextView
                    style="@style/add_duka_title"
                    android:text="@string/jingdu"/>

                <EditText
                    android:id="@+id/longitude"
                    style="@style/add_duka_content"/>
            </LinearLayout>

            <LinearLayout
                style="@style/add_duka_item">
                <TextView
                    style="@style/add_duka_title"
                    android:text="@string/weidu"/>

                <EditText
                    android:id="@+id/latitude"
                    style="@style/add_duka_content"/>
            </LinearLayout>

            <LinearLayout
                style="@style/add_duka_item">
                <TextView
                    style="@style/add_duka_title"
                    android:text="@string/bianhao"/>

                <EditText
                    android:id="@+id/cardReaderNumber"
                    style="@style/add_duka_content"/>
            </LinearLayout>

            <LinearLayout
                style="@style/add_duka_item">
                <TextView
                    style="@style/add_duka_title"
                    android:text="@string/quyuma"/>

                <EditText
                    android:id="@+id/cardReaderAreaCode"
                    style="@style/add_duka_content"/>
            </LinearLayout>

            <LinearLayout
                style="@style/add_duka_item">
                <TextView
                    style="@style/add_duka_title"
                    android:text="@string/yingjianid"/>

                <EditText
                    android:id="@+id/cardReaderId"
                    style="@style/add_duka_content"/>
            </LinearLayout>

            <LinearLayout
                style="@style/add_duka_item">
                <TextView
                    style="@style/add_duka_title"
                    android:text="@string/suoshubumen"/>

                <EditText
                    android:id="@+id/managerUserId"
                    style="@style/add_duka_content"/>
            </LinearLayout>

            <LinearLayout
                style="@style/add_duka_item">
                <TextView
                    style="@style/add_duka_title"
                    android:text="@string/guanlirenyuan"/>

                <EditText
                    android:id="@+id/department"
                    style="@style/add_duka_content"/>
            </LinearLayout>

            <LinearLayout
                style="@style/add_duka_item">
                <TextView
                    style="@style/add_duka_title"
                    android:text="@string/remark"/>

                <EditText
                    android:id="@+id/remark"
                    style="@style/add_duka_content"/>
            </LinearLayout>

            <Button
                android:id="@+id/save"
                style="@style/match_width_wrap_height"
                android:text="保存"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
