<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        style="@style/match_width_wrap_height"
        android:orientation="vertical">
        <android.support.v4.view.ViewPager
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="200dp"/>

        <LinearLayout
            android:id="@+id/dots"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"/>
    </LinearLayout>
    <TextView
        android:id="@+id/car_query"
        style="@style/manager_item"
        android:text="@string/car_query"/>

    <TextView
        android:id="@+id/driver_query"
        style="@style/manager_item"
        android:text="@string/driver_query"/>

    <TextView
        android:id="@+id/add_duka"
        style="@style/manager_item"
        android:text="@string/add_duka"/>

    <TextView
        android:id="@+id/duka_manager"
        style="@style/manager_item"
        android:text="@string/duka_manager"/>
</LinearLayout>
