<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:id="@+id/action_bar"
        style="@style/action_bar_container">
        <TextView
            android:id="@+id/back"
            style="@style/action_back"
            android:text="@string/back"/>

        <TextView
            style="@style/action_bar_title"
            android:text="@string/duka_manager"/>

        <TextView
            android:id="@+id/query"
            style="@style/full_height_wrap_width"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical"
            android:paddingRight="16dp"
            android:text="@string/query"
            android:textColor="@android:color/white"/>
    </RelativeLayout>

    <ListView
        android:id="@+id/list"
        style="@style/full_width_full_height"
        android:divider="@null"/>
</LinearLayout>
