<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">
    <RelativeLayout
        android:id="@+id/action_bar"
        style="@style/action_bar_container">
        <TextView
            android:id="@+id/back"
            style="@style/action_back"
            android:text="@string/back"/>

        <TextView
            style="@style/action_bar_title"
            android:text="@string/about_us"/>
    </RelativeLayout>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_below="@id/action_bar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:src="@mipmap/logo"/>

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textColor="@color/label_text_gray"
        android:textSize="12sp"
        tools:text="版本号V1.0"/>

    <RelativeLayout
        android:id="@+id/call"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/version"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_item"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kefu"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="020-23328999"/>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:gravity="center|top"
        android:text="@string/www_gdrctd_com"
        android:textColor="@color/black"
        android:textSize="12sp"/>
</RelativeLayout>
