<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:id="@+id/action_bar"
        style="@style/action_bar_container">
        <TextView
            android:id="@+id/back"
            style="@style/action_back"
            android:text="@string/back"/>

        <TextView
            style="@style/action_bar_title"
            android:text="@string/driver_query"/>

        <TextView
            android:id="@+id/query"
            style="@style/action_bar_right"
            android:text="@string/tiaojian_query"/>
    </RelativeLayout>

    <FrameLayout
        style="@style/match_width_match_height"
        android:layout_weight="1">
        <com.baidu.mapapi.map.MapView
            android:id="@+id/map"
            style="@style/match_width_match_height"
            android:clickable="true"/>

        <RelativeLayout
            android:id="@+id/list_container"
            style="@style/match_width_match_height"
            android:background="@android:color/white"
            android:visibility="gone">
            <ListView
                android:id="@+id/list"
                style="@style/match_width_match_height"
                android:divider="@null"/>
        </RelativeLayout>
    </FrameLayout>

    <LinearLayout
        style="@style/match_width_wrap_height"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/map_mode"
            style="@style/wrap_width_match_height"
            android:layout_weight="1"
            android:gravity="center"
            android:text="地图"/>

        <TextView
            android:id="@+id/list_mode"
            style="@style/wrap_width_match_height"
            android:layout_weight="1"
            android:gravity="center"
            android:text="列表"/>
    </LinearLayout>
</LinearLayout>
